# Clapping-games

./: CMakeLists.txt  README.md  game.cpp  game.h  player.cpp  player.h
games/: accumulating_beans.cpp  accumulating_beans.h  fortune.cpp  fortune.h
main/: main_accumulating_beans.cpp  main_accumulating_beans_pvc.cpp  main_fortune.cpp  main_fortune_pvc.cpp
